--- a/index.html
+++ b/index.html
@@ -129,6 +129,24 @@ You are the hyper-sexual adulteress of his nightmares in every reality.] (click-
 
 Why don&#39;t you [[go to the bathroom]] to take a break from this insane convergence of dimensions?]
 
+&lt;audio src=&quot;./audio/nightclub.mp3&quot; autoplay loop /&gt;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </tw-passagedata><tw-passagedata pid="4" name="go to the bathroom" tags="" position="327,393" size="100,100">You hurry up the stairs as fast as your boots will allow, your purple silk dress swishing at your thighs. (click-append: &quot;swishing at your thighs.&quot;) [ You walk past security into the bathroom and enter the first stall on your right, locking the door.] (click-append: &quot;locking the door.&quot;) [ You sit on the toilet and start to pee and then your heart sinks.] (click-append: &quot;your heart sinks.&quot;) [ You can hear a commotion outside and you know it&#39;s about you.] (click-append: &quot;it&#39;s about you.&quot;) [
 
 
@@ -261,7 +279,26 @@ You confront X.] (click-append: &quot;You confront X&quot;) [ about spying on yo
 
 Of course he denies (click-replace: &quot;denies&quot;) [lies about] checking up on your whereabouts.] (click-append: &quot;checking up on your whereabouts&quot;) [, although later he will confess to the chickenwire in therapy] (click-append: &quot;confess to the chickenwire&quot;) [ and the stalking] (click-append: &quot;the stalking in therapy.&quot;) [
 
-[[The next day...]]]</tw-passagedata><tw-passagedata pid="8" name="The next day..." tags="" position="191,464" size="100,100">X doesn&#39;t want you to sell clothing at the clubs. (click-append: &quot;X doesn&#39;t want you to sell clothing at the clubs.&quot;) [ He phones you as you drive away with your bags packed for the night.] (click-append: &quot;He phones you as you drive away with your bags packed for the night.&quot;) [ You&#39;re beginning to feel suffocated.] (click-append: &quot;suffocated&quot;) [; you can&#39;t get out of the apartment quick enough] (click-append: &quot;quick enough.&quot;) [
+[[The next day...]]]
+
+
+&lt;audio src=&quot;./audio/metal.mp3&quot; autoplay loop /&gt;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</tw-passagedata><tw-passagedata pid="8" name="The next day..." tags="" position="191,464" size="100,100">X doesn&#39;t want you to sell clothing at the clubs. (click-append: &quot;X doesn&#39;t want you to sell clothing at the clubs.&quot;) [ He phones you as you drive away with your bags packed for the night.] (click-append: &quot;He phones you as you drive away with your bags packed for the night.&quot;) [ You&#39;re beginning to feel suffocated.] (click-append: &quot;suffocated&quot;) [; you can&#39;t get out of the apartment quick enough] (click-append: &quot;quick enough.&quot;) [
 
 You answer the phone.] (click-append: &quot;You answer the phone.&quot;) 
 [
@@ -547,7 +584,7 @@ You battle for your rights, reading the fine print.] (click-append: &quot;fine p
 [(enchant:?passage,(b4r:&quot;double&quot;)+(b4r-colour:white))&#39;&#39;[[THE CHICKENWIRE INCIDENT]]&#39;&#39;]
 
 
-&lt;audio src=&quot;./audio/fence.mp3&quot; autoplay loop /&gt;</tw-passagedata><tw-passagedata pid="22" name="THE CHICKENWIRE INCIDENT" tags="" position="402,128" size="100,100">It&#39;s 9pm on a Friday night. You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns. (click-append: &quot;sequinned gowns.&quot;) [
+&lt;audio src=&quot;./audio/fence.mp3&quot; autoplay /&gt;</tw-passagedata><tw-passagedata pid="22" name="THE CHICKENWIRE INCIDENT" tags="" position="402,128" size="100,100">It&#39;s 9pm on a Friday night. You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns. (click-append: &quot;sequinned gowns.&quot;) [
 
 
 &lt;img src=&quot;img/rack6.png&quot; alt=&quot;clothing rack with sparkly outfits&quot; /&gt;
