--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@ tw-passage[tags~="title-page"] {
  background-size:cover;
 }
 
+tw-passage {
+  padding-bottom: 200px;}
+
 tw-story {
   font-family: 'EB Garamond', serif;
 }
@@ -283,21 +286,6 @@ Of course he denies (click-replace: &quot;denies&quot;) [lies about] checking up
 
 
 &lt;audio src=&quot;./audio/metal.mp3&quot; autoplay loop /&gt;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </tw-passagedata><tw-passagedata pid="8" name="The next day..." tags="" position="191,464" size="100,100">X doesn&#39;t want you to sell clothing at the clubs. (click-append: &quot;X doesn&#39;t want you to sell clothing at the clubs.&quot;) [ He phones you as you drive away with your bags packed for the night.] (click-append: &quot;He phones you as you drive away with your bags packed for the night.&quot;) [ You&#39;re beginning to feel suffocated.] (click-append: &quot;suffocated&quot;) [; you can&#39;t get out of the apartment quick enough] (click-append: &quot;quick enough.&quot;) [
 
 You answer the phone.] (click-append: &quot;You answer the phone.&quot;) 
@@ -612,27 +600,6 @@ A certain incubus picks you as an easy target.] (click-replace: &quot;an easy ta
 
 
 Your phone is still ringing. Do you [[slide right to answer]] or [[ignore it]]?
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,i=!1,a=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){i=!0,a=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw a}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
