--- a/index.html
+++ b/index.html
@@ -212,48 +212,48 @@ It will seem that nothing you do or say matters.] (click-append: &quot;It will s
 (live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
 
 
-[[You expect to feel...]]</tw-passagedata><tw-passagedata pid="6" name="having something stolen" tags="" position="567,156" size="100,100">Karla is owned by a boxer from Sydney. (click-append: &quot;Karla is owned by a boxer from Sydney&quot;) [, or at least that&#39;s how it appears from the way she has to sneak around to have any semblence of a life] (click-append: &quot;she has to sneak around to have any semblence of a life&quot;) [ You love her and Carmella immediately when they catch and call out the girl who rips an outfit off your rack and hides it away without payment.] (click-append: &quot;hides it away without payment.&quot;) [
+[[You expect to feel...]]</tw-passagedata><tw-passagedata pid="6" name="having something stolen" tags="" position="567,156" size="100,100">Karla is owned by a boxer from Sydney. (click-append: &quot;Karla is owned by a boxer from Sydney&quot;) [, or at least that&#39;s how it appears from the way she has to sneak around to have any semblence of a life] (click-append: &quot;at least that&#39;s how it appears from the way she has to sneak around to have any semblence of a life.&quot;) [ You love her immediately when she and Carmella catch and call out the girl who rips an outfit off your rack and hides it away without payment.] (click-append: &quot;without payment.&quot;) [
 
 
 Karla buys Ed Hardy hoodies and dresses from you.] (click-replace: &quot;hoodies and dresses&quot;) [shit] (click-append: &quot;Ed Hardy shit from you.&quot;) [ The bikies love it.] (click-append: &quot;The bikies love it.&quot;) [
 
 
-One night Jodi organises a birthday party for one of her friends.] (click-replace: &quot;friends&quot;) [clients] (click-replace: &quot;clients&quot;) [suppliers] (click-append: &quot;her suppliers.&quot;) [ 
+One night Jodi organises a birthday party for one of her friends.] (click-replace: &quot;friends&quot;) [clients] (click-replace: &quot;clients&quot;) [suppliers] (click-append: &quot;suppliers.&quot;) [ 
 
-Let&#39;s call him D.] (click-append: &quot;Let&#39;s call him D.&quot;) [ For Dickhead] (click-append: &quot;For Dickhead.&quot;) [
+Let&#39;s call him D.] (click-append: &quot;Let&#39;s call him D.&quot;) [ For Dickhead.] (click-append: &quot;For Dickhead.&quot;) [
 
 
 &lt;img src=&quot;img/party2.png&quot; alt=&quot;party girls in limo&quot; /&gt;
 
 
-Back at D&#39;s apartment after a typical Sunday (click-replace: &quot;Sunday&quot;) [strippers&#39; night out] at Love Machine, D is hellbent on getting Karla to fuck him.] (click-append: &quot;to fuck him.&quot;) [ With Jodi unofficially acting as his pimp, (click-append: &quot;his pimp&quot;) [, which is something she would never even admit to herself] bringing him girls he might like, or whom he might find easy, Karla is simply sport.] (click-append: &quot;Karla is simply sport.&quot;) [ 
+Back at D&#39;s apartment after a typical Sunday (click-replace: &quot;Sunday&quot;) [strippers&#39; night out] at Love Machine, D is hellbent on getting Karla to fuck him.] (click-append: &quot;to fuck him.&quot;) [ With Jodi unofficially acting as his pimp, (click-append: &quot;his pimp&quot;) [, which is something she would never even admit to herself] (click-append: &quot;which is something she would never even admit to herself&quot;) [, and bringing him girls he might like, or whom he might find easy] Karla is simply sport.] (click-append: &quot;Karla is simply sport.&quot;) [ 
 
 
-D won&#39;t let you leave until you each have a drink.] (click-append: &quot;until you each have a drink.&quot;) [ He&#39;s spiked them all with G, which Jodi loves and you hate.] (click-append: &quot;He&#39;s spiked them all with G, which Jodi loves and you hate.&quot;) [ Karla is freaking out, but quietly.] (click-append: &quot;but quietly.&quot;) [ You never know what a scum-of-the-earth wanna-be baller (click-replace: &quot;baller&quot;) [gangster] (click-replace: &quot;gangster&quot;) [Romeo] might do. ] (click-append: &quot;Romeo might do.&quot;) [ 
+D won&#39;t let you leave until you each have a drink.] (click-append: &quot;until you each have a drink.&quot;) [ He&#39;s spiked them all with G, which Jodi loves and you hate.] (click-append: &quot;He&#39;s spiked them all with G, which Jodi loves and you hate.&quot;) [ Karla is freaking out, but quietly.] (click-append: &quot;but quietly.&quot;) [ You never know what a scum-of-the-earth wanna-be baller (click-replace: &quot;baller&quot;) [gangster] (click-replace: &quot;gangster&quot;) [Romeo] might do. ] (click-append: &quot;what a scum-of-the-earth wanna-be Romeo might do.&quot;) [ 
 
 
 These are the kinds of guys who bolt the doors from the inside and then hide the keys.] (click-append: &quot;These are the kinds of guys who bolt the doors from the inside and then hide the keys.&quot;) [
 
 
-You might ask...] (click-append: &quot;You might ask...&quot;) [ and this is a pertinant question: Why the fuck put yourself in danger like that?] (click-append: &quot;Why the fuck put yourself in danger like that?&quot;) [ It&#39;s partly to please Jodi.] (Click-append: &quot;It&#39;s partly to please Jodi.&quot;) [ But again: Why the fuck would you want a friend like that?] 
+You might ask a pertinant question: Why the fuck put yourself in danger like that?] (click-append: &quot;Why the fuck put yourself in danger like that?&quot;) [ It&#39;s partly to please Jodi.] (Click-append: &quot;It&#39;s partly to please Jodi.&quot;) [ But again: Why the fuck would you want a friend like that?] (click-append: &quot;Why the fuck would you want a friend like that?&quot;) [
 
 
-Also... (click-append: &quot;Also...&quot;) [industry night is a gamble with high stakes.] (click-append: &quot;high stakes.&quot;) [ You never know whether you&#39;ll make it til sunrise, whether you&#39;ll meet an elusive someone, or even how/if you&#39;ll get home.] (click-append: &quot;or even how/if you&#39;ll get home.&quot;) [
+Industry night is a gamble with high stakes.] (click-append: &quot;Industry night is a gamble with high stakes.&quot;) [ You never know whether you&#39;ll make it til sunrise, whether you&#39;ll meet an elusive someone, or even how (if) you&#39;ll get home.] (click-append: &quot;or even how/if you&#39;ll get home.&quot;) [
 
 
 &lt;img src=&quot;img/melbourne.jpg&quot; alt=&quot;Melbourne at night&quot; /&gt;
 
 
-On this particular Sunday night...] (click-append: &quot;On this particular Sunday night&quot;) [, now technically Monday morning] (click-append: &quot;Monday morning...&quot;) [you decide to play hero to Karla.] (click-append: &quot;hero to Karla&quot;) [ by downing her drink as well as yours] 
+On this particular Sunday night...] (click-append: &quot;On this particular Sunday night&quot;) [, now technically Monday morning] (click-append: &quot;Monday morning...&quot;) [you decide to play hero to Karla.] (click-append: &quot;hero to Karla&quot;) [ by downing her drink as well as yours] (click-append: &quot;you decide to play hero to Karla by downing her drink as well as yours.&quot;) [ 
 
 
-In the end... (click-append: &quot;In the end...&quot;) [you and Karla make it out of there unnmolested.] (click-append: &quot;unmolested&quot;) [, which feels like a win at the time] 
+In the end you and Karla make it out of there unnmolested.] (click-append: &quot;In the end you and Karla make it out of there unnmolested&quot;) [, which feels like a win at the time] (click-append: &quot;feels like a win at the time.&quot;) [
 
 
-You wonder... (click-append: &quot;You wonder...&quot;) [if Jodi ended up giving herself up to D as a booby prize after you and Karla left.] (click-append: &quot;booby prize&quot;) [ in exchange for a pipe]
+You wonder if Jodi ended up giving herself up to D as a booby prize after you and Karla left.] (click-append: &quot;if Jodi ended up giving herself up to D as abooby prize&quot;) [ in exchange for a pipe] (click-append: &quot;in exchange for a pipe.&quot;) [
 
 
-Where&#39;s your head at? Your phone&#39;s still ringing! You&#39;d better [[slide right to answer]].</tw-passagedata><tw-passagedata pid="7" name="call X" tags="" position="276,264" size="100,100">Just recently Jade had asked X how to install chickenwire fencing to prevent her cat from escaping off of her balcony. (click-append: &quot;off of her balcony.&quot;) [
+Where&#39;s your head at? Your phone&#39;s still ringing! You&#39;d better [[slide right to answer]].]</tw-passagedata><tw-passagedata pid="7" name="call X" tags="" position="276,264" size="100,100">Just recently Jade had asked X how to install chickenwire fencing to prevent her cat from escaping off of her balcony. (click-append: &quot;off of her balcony.&quot;) [
 
 
 Who else would rock up at her apartment on a Friday night to offer chickenwire installation?] (click-append: &quot;chickenwire installation?&quot;) [
