--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@ tw-story {
 
 
 
-</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="ignore it" tags="" position="557,294" size="100,100">You don&#39;t want to miss out on any sales or risk [[having something stolen]]. You train your eye on the blonde with the dreadlocks who keeps showing off a strappy black bikini on Instagram that she got from you but didn&#39;t pay for.
+</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="ignore it" tags="" position="557,294" size="100,100">You don&#39;t want to miss out on any sales or risk [[having something stolen]]. You train your eye on the blonde with the dreadlocks. (click-append: &quot;the blonde with the dreadlocks&quot;) [ who keeps modelling a strappy black bikini on Instagram that she stole from you last week] (click-append: &quot;that she stole from you last week.&quot;) [
 
 &lt;img src=&quot;img/rackgallery.png&quot; alt=&quot;clothing rack with stripper outfits&quot; /&gt;
 
-Most of the girls are honest (click-append: &quot;honest&quot;) [ with you at least,] but there&#39;s always one or two who feel entitled to everyone else&#39;s stuff. (click-replace: &quot;stuff&quot;) [g-strings] (click-replace: &quot;g-strings&quot;)[costumes] (click-replace: &quot;costumes&quot;) [eyeliner] (click-replace: &quot;eyeliner&quot;) [lipstick] (click-replace: &quot;lipstick&quot;) [money] (click-replace: &quot;money&quot;) [partners]
+Most of the girls are honest (click-append: &quot;honest&quot;) [ with you at least,] but there&#39;s always one or two who feel entitled to everyone else&#39;s stuff.] (click-replace: &quot;stuff&quot;) [g-strings] (click-replace: &quot;g-strings&quot;)[costumes] (click-replace: &quot;costumes&quot;) [eyeliner] (click-replace: &quot;eyeliner&quot;) [lipstick] (click-replace: &quot;lipstick&quot;) [money] (click-replace: &quot;money&quot;) [partners]
 
 &lt;img src=&quot;img/sparkly.png&quot; alt=&quot;clothing rack with sparkly outfits&quot; /&gt;
 
@@ -133,23 +133,6 @@ You are the hyper-sexual adulteress of his nightmares in every reality.] (click-
 Why don&#39;t you [[go to the bathroom]] to take a break from this insane convergence of dimensions?]
 
 &lt;audio src=&quot;./audio/nightclub.mp3&quot; autoplay loop /&gt;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </tw-passagedata><tw-passagedata pid="4" name="go to the bathroom" tags="" position="327,393" size="100,100">You hurry up the stairs as fast as your boots will allow, your purple silk dress swishing at your thighs. (click-append: &quot;swishing at your thighs.&quot;) [ You walk past security into the bathroom and enter the first stall on your right, locking the door.] (click-append: &quot;locking the door.&quot;) [ You sit on the toilet and start to pee and then your heart sinks.] (click-append: &quot;your heart sinks.&quot;) [ You can hear a commotion outside and you know it&#39;s about you.] (click-append: &quot;it&#39;s about you.&quot;) [
 
 
@@ -572,7 +555,7 @@ You battle for your rights, reading the fine print.] (click-append: &quot;fine p
 [(enchant:?passage,(b4r:&quot;double&quot;)+(b4r-colour:white))&#39;&#39;[[THE CHICKENWIRE INCIDENT]]&#39;&#39;]
 
 
-&lt;audio src=&quot;./audio/fence.mp3&quot; autoplay /&gt;</tw-passagedata><tw-passagedata pid="22" name="THE CHICKENWIRE INCIDENT" tags="" position="402,128" size="100,100">It&#39;s 9pm on a Friday night. You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns. (click-append: &quot;sequinned gowns.&quot;) [
+&lt;audio src=&quot;./audio/fence.mp3&quot; autoplay /&gt;</tw-passagedata><tw-passagedata pid="22" name="THE CHICKENWIRE INCIDENT" tags="" position="402,128" size="100,100">It&#39;s 9pm on a Friday night. (click-append: &quot;It&#39;s 9pm on a Friday night.&quot;) [You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns.] (click-append: &quot;sequinned gowns.&quot;) [
 
 
 &lt;img src=&quot;img/rack6.png&quot; alt=&quot;clothing rack with sparkly outfits&quot; /&gt;
@@ -596,10 +579,10 @@ Ten years into this cycle (click-prepend: &quot;cycle&quot;) [very fun whirlwind
 A certain incubus picks you as an easy target.] (click-replace: &quot;an easy target&quot;) [his mark] (click-replace: &quot; his mark&quot;) [ his source of narcissistic supply] (click-append: &quot;source of narcissistic supply.&quot;) [ He&#39;s in the process of draining the light out of your life.] (click-append: &quot;light out of your life.&quot;) [
 
 
-&lt;img src=&quot;img/party3.png&quot; alt=&quot;more party girls&quot; /&gt;]
+&lt;img src=&quot;img/party3.png&quot; alt=&quot;more party girls&quot; /&gt;
 
 
-Your phone is still ringing. Do you [[slide right to answer]] or [[ignore it]]?
+Your phone is still ringing. Do you [[slide right to answer]] or [[ignore it]]?]
 </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,i=!1,a=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){i=!0,a=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw a}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
