--- a/index.html
+++ b/index.html
@@ -41,11 +41,16 @@ tw-story {
 
 </style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="ignore it" tags="" position="557,294" size="100,100">You don&#39;t want to miss out on any sales or risk [[having something stolen]]. You train your eye on the blonde with the dreadlocks. (click-append: &quot;the blonde with the dreadlocks&quot;) [ who keeps modelling a strappy black bikini on Instagram that she stole from you last week] (click-append: &quot;that she stole from you last week.&quot;) [
 
+
 &lt;img src=&quot;img/rackgallery.png&quot; alt=&quot;clothing rack with stripper outfits&quot; /&gt;
+
 
 Most of the girls are honest (click-append: &quot;honest&quot;) [ with you at least,] but there&#39;s always one or two who feel entitled to everyone else&#39;s stuff.] (click-replace: &quot;stuff&quot;) [g-strings] (click-replace: &quot;g-strings&quot;)[costumes] (click-replace: &quot;costumes&quot;) [eyeliner] (click-replace: &quot;eyeliner&quot;) [lipstick] (click-replace: &quot;lipstick&quot;) [money] (click-replace: &quot;money&quot;) [partners]
 
+
 &lt;img src=&quot;img/sparkly.png&quot; alt=&quot;clothing rack with sparkly outfits&quot; /&gt;
+
+
 
 Your phone rings again. It must be an emergency. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="2" name="slide right to answer" tags="" position="410,276" size="100,100">The timing couldn&#39;t be worse. (click-append: &quot;The timing couldn&#39;t be worse.&quot;) [ The girls are swarming around your rack of pretty things, asking for pricing, tangling bras in hangers and putting light-coloured garments at the risk of fake tan.] (click-append: &quot;at the risk of fake tan.&quot;) [ 
 
@@ -81,6 +86,8 @@ She stares blankly, not comprehending the basic rules dressing room etiquette.] 
 
 
 You tell her...(click-append: &quot;You tell her...&quot;) [that it&#39;s probably just X, your erstwhile boyfriend.] (click-append: &quot;your erstwhile boyfriend.&quot;) [
+
+
 
 Do you [[panic because of what happened the other week]] or offer to [[call X]] to find out for sure?]</tw-passagedata><tw-passagedata pid="3" name="panic because of what happened the other week" tags="" position="452,394" size="100,100">Tramp&#39;s not your usual scene. (click-append: &quot;Tramp&#39;s not your usual scene&quot;) [, but you go there with Jade and X to watch your friend spin the decks] (click-append: &quot;spin the decks.&quot;) [ 
 
@@ -132,7 +139,6 @@ You are the hyper-sexual adulteress of his nightmares in every reality.] (click-
 
 Why don&#39;t you [[go to the bathroom]] to take a break from this insane convergence of dimensions?]
 
-&lt;audio src=&quot;./audio/nightclub.mp3&quot; autoplay loop /&gt;
 </tw-passagedata><tw-passagedata pid="4" name="go to the bathroom" tags="" position="327,393" size="100,100">You hurry up the stairs as fast as your boots will allow, your purple silk dress swishing at your thighs. (click-append: &quot;swishing at your thighs.&quot;) [ You walk past security into the bathroom and enter the first stall on your right, locking the door.] (click-append: &quot;locking the door.&quot;) [ You sit on the toilet and start to pee and then your heart sinks.] (click-append: &quot;your heart sinks.&quot;) [ You can hear a commotion outside and you know it&#39;s about you.] (click-append: &quot;it&#39;s about you.&quot;) [
 
 
@@ -212,7 +218,7 @@ Let&#39;s call him D.] (click-append: &quot;Let&#39;s call him D.&quot;) [ For D
 Back at D&#39;s apartment after a typical Sunday (click-replace: &quot;Sunday&quot;) [strippers&#39; night out] at Love Machine, D is hellbent on getting Karla to fuck him.] (click-append: &quot;to fuck him.&quot;) [ With Jodi unofficially acting as his pimp, (click-append: &quot;his pimp&quot;) [, which is something she would never even admit to herself] (click-append: &quot;which is something she would never even admit to herself&quot;) [, and bringing him girls he might like, or whom he might find easy] Karla is simply sport.] (click-append: &quot;Karla is simply sport.&quot;) [ 
 
 
-D won&#39;t let you leave until you each have a drink.] (click-append: &quot;until you each have a drink.&quot;) [ He&#39;s spiked them all with G, which Jodi loves and you hate.] (click-append: &quot;He&#39;s spiked them all with G, which Jodi loves and you hate.&quot;) [ Karla is freaking out, but quietly.] (click-append: &quot;but quietly.&quot;) [ You never know what a scum-of-the-earth wanna-be baller (click-replace: &quot;baller&quot;) [gangster] (click-replace: &quot;gangster&quot;) [Romeo] might do. ] (click-append: &quot;what a scum-of-the-earth wanna-be Romeo might do.&quot;) [ 
+D won&#39;t let you leave until you each have a drink.] (click-append: &quot;until you each have a drink.&quot;) [ He&#39;s spiked them all with G, which Jodi loves and you hate.] (click-append: &quot;He&#39;s spiked them all with G, which Jodi loves and you hate.&quot;) [ Karla is freaking out, but quietly.] (click-append: &quot;but quietly.&quot;) [ You never know what a scum-of-the-earth wanna-be baller (click-replace: &quot;baller&quot;) [gangster] (click-replace: &quot;gangster&quot;) [Romeo] might do. ] (click-append: &quot;might do.&quot;) [ 
 
 
 These are the kinds of guys who bolt the doors from the inside and then hide the keys.] (click-append: &quot;These are the kinds of guys who bolt the doors from the inside and then hide the keys.&quot;) [
@@ -221,7 +227,7 @@ These are the kinds of guys who bolt the doors from the inside and then hide the
 You might ask a pertinant question: Why the fuck put yourself in danger like that?] (click-append: &quot;Why the fuck put yourself in danger like that?&quot;) [ It&#39;s partly to please Jodi.] (Click-append: &quot;It&#39;s partly to please Jodi.&quot;) [ But again: Why the fuck would you want a friend like that?] (click-append: &quot;Why the fuck would you want a friend like that?&quot;) [
 
 
-Industry night is a gamble with high stakes.] (click-append: &quot;Industry night is a gamble with high stakes.&quot;) [ You never know whether you&#39;ll make it til sunrise, whether you&#39;ll meet an elusive someone, or even how (if) you&#39;ll get home.] (click-append: &quot;or even how/if you&#39;ll get home.&quot;) [
+Industry night is a gamble with high stakes.] (click-append: &quot;Industry night is a gamble with high stakes.&quot;) [ You never know whether you&#39;ll make it til sunrise, whether you&#39;ll meet an elusive someone, or even how (if) you&#39;ll get home.] (click-append: &quot;or even how (if) you&#39;ll get home.&quot;) [
 
 
 &lt;img src=&quot;img/melbourne.jpg&quot; alt=&quot;Melbourne at night&quot; /&gt;
@@ -233,7 +239,7 @@ On this particular Sunday night...] (click-append: &quot;On this particular Sund
 In the end you and Karla make it out of there unnmolested.] (click-append: &quot;In the end you and Karla make it out of there unnmolested&quot;) [, which feels like a win at the time] (click-append: &quot;feels like a win at the time.&quot;) [
 
 
-You wonder if Jodi ended up giving herself up to D as a booby prize after you and Karla left.] (click-append: &quot;if Jodi ended up giving herself up to D as abooby prize&quot;) [ in exchange for a pipe] (click-append: &quot;in exchange for a pipe.&quot;) [
+You wonder if Jodi will give herself to D as consolation prize after you and Karla leave.] (click-append: &quot;after you and Karla leave&quot;) [ in exchange for a pipe] (click-append: &quot;in exchange for a pipe.&quot;) [
 
 
 Where&#39;s your head at? Your phone&#39;s still ringing! You&#39;d better [[slide right to answer]].]</tw-passagedata><tw-passagedata pid="7" name="call X" tags="" position="276,264" size="100,100">Just recently Jade had asked X how to install chickenwire fencing to prevent her cat from escaping off of her balcony. (click-append: &quot;off of her balcony.&quot;) [
@@ -555,7 +561,9 @@ You battle for your rights, reading the fine print.] (click-append: &quot;fine p
 [(enchant:?passage,(b4r:&quot;double&quot;)+(b4r-colour:white))&#39;&#39;[[THE CHICKENWIRE INCIDENT]]&#39;&#39;]
 
 
-&lt;audio src=&quot;./audio/fence.mp3&quot; autoplay /&gt;</tw-passagedata><tw-passagedata pid="22" name="THE CHICKENWIRE INCIDENT" tags="" position="402,128" size="100,100">It&#39;s 9pm on a Friday night. (click-append: &quot;It&#39;s 9pm on a Friday night.&quot;) [You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns.] (click-append: &quot;sequinned gowns.&quot;) [
+
+
+</tw-passagedata><tw-passagedata pid="22" name="THE CHICKENWIRE INCIDENT" tags="" position="402,128" size="100,100">It&#39;s 9pm on a Friday night. (click-append: &quot;It&#39;s 9pm on a Friday night.&quot;) [ You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns.] (click-append: &quot;sequinned gowns.&quot;) [
 
 
 &lt;img src=&quot;img/rack6.png&quot; alt=&quot;clothing rack with sparkly outfits&quot; /&gt;
@@ -565,24 +573,33 @@ You battle for your rights, reading the fine print.] (click-append: &quot;fine p
 The money you earn is covered in sweat and cocaine.] (click-append: &quot;sweat and cocaine.&quot;) [ Isn&#39;t all money, really?] (click-append: &quot;Isn&#39;t all money, really?&quot;) [ 
 
 
-Tired of exploiting yourself, you tap into the niche dancewear market instead. Your is not to take advantage of the girls, but to provide a service.] (click-append: &quot;provide a service.&quot;) [ You play stylist.] (click-replace: &quot;stylist&quot;) [cheerleader] (click-replace: &quot;cheerleader&quot;) [confidante] (click-replace: &quot;confidante&quot;) [seamstress] (click-replace: &quot;seamstress&quot;) [stage mom] (click-replace: &quot;stage mom&quot;) [therapist] (click-replace: &quot;therapist&quot;) [partner in crime] (click-append: &quot;partner in crime.&quot;) [
+Tired of exploiting yourself, you tap into the niche dancewear market instead. Your goal is not to take advantage of the girls, but to provide a service.] (click-append: &quot;provide a service.&quot;) [ You play stylist.] (click-replace: &quot;stylist&quot;) [cheerleader] (click-replace: &quot;cheerleader&quot;) [confidante] (click-replace: &quot;confidante&quot;) [seamstress] (click-replace: &quot;seamstress&quot;) [stage mom] (click-replace: &quot;stage mom&quot;) [therapist] (click-replace: &quot;therapist&quot;) [partner in crime] (click-append: &quot;partner in crime.&quot;) [
+
 
 &lt;img src=&quot;img/party.png&quot; alt=&quot;party girls&quot; /&gt;
 
+
 Your life bleeds into theirs: their customers pay for your product; their customer&#39;s powders line your nose.] (click-append: &quot;line your nose&quot;) [, because to refuse would earn you the label of snitch] (click-append: &quot;snitch.&quot;) [ That is to say, you&#39;re an active participant.] (click-replace: &quot;an active participant&quot;) [a consumer as much as a hawker of pretty things] (click-replace: &quot;a consumer as much as a hawker of pretty things&quot;) [as likely to keep a corset for yourself as you were to sell it] (click-append: &quot;as likely to keep a corset for yourself as you were to sell it&quot;) [. Which means you have to sell more to buy more to wear more to sell more] (click-append: &quot;to wear more to sell more.&quot;) [
+
 
 &lt;img src=&quot;img/corsets.png&quot; alt=&quot;girls in corsets drinking champagne&quot; /&gt;
 
+
 Ten years into this cycle (click-prepend: &quot;cycle&quot;) [very fun whirlwind ] (click-replace: &quot;very fun whirlwind cycle&quot;) [expensive and sometimes debt-inducing lifestyle] and your world is about to change.] (click-append: &quot;about to change.&quot;) [ Things had already begun to turn upside-down, but now other people are being sucked into the hellish vortex that is your life.] (click-append: &quot;hellish vortex that is your life.&quot;) [ 
-
-
-A certain incubus picks you as an easy target.] (click-replace: &quot;an easy target&quot;) [his mark] (click-replace: &quot; his mark&quot;) [ his source of narcissistic supply] (click-append: &quot;source of narcissistic supply.&quot;) [ He&#39;s in the process of draining the light out of your life.] (click-append: &quot;light out of your life.&quot;) [
 
 
 &lt;img src=&quot;img/party3.png&quot; alt=&quot;more party girls&quot; /&gt;
 
 
-Your phone is still ringing. Do you [[slide right to answer]] or [[ignore it]]?]
+A certain incubus picks you as an easy target.] (click-replace: &quot;an easy target&quot;) [his mark] (click-replace: &quot; his mark&quot;) [ his source of narcissistic supply] (click-append: &quot;source of narcissistic supply.&quot;) [ He&#39;s in the process of draining the light out of your life.] 
+
+
+
+
+
+
+
+Your phone keeps ringing. Do you [[slide right to answer]] or [[ignore it]]?
 </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,i=!1,a=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){i=!0,a=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw a}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
