--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ You give X the illusion of hope.] (click-append: &quot;of hope&quot;) [ and tbh 
 X apologises for his behaviour.] (click-append: &quot;X apologises for his behaviour.&quot;) [ He promises not to track you anymore.] (click-replace: &quot;track&quot;) [stalk] (click-append: &quot;He promises not to stalk you anymore.&quot;) [ He promises to stop threatening to kill himself if you leave.] (click-replace: &quot;threatening to kill himself&quot;) [threatening to kill you] (click-append: &quot;if you leave.&quot;) [
 
 
-He begs you to give him one more chance.] (click-append: &quot;He begs you to give him one more chance.&quot;)[ He threatens to kill himself if you leave him.](click-replace: &quot;himself&quot;) [you](click-replace: &quot;leave him&quot;) [ever meet someone new] (click-append: &quot;He threatens to kill you if you leave him.&quot;) [
+He begs you to give him one more chance.] (click-append: &quot;He begs you to give him one more chance.&quot;)[ He threatens to kill himself if you leave him.](click-replace: &quot;himself&quot;) [you](click-replace: &quot;leave him&quot;) [ever meet someone new] (click-append: &quot;ever meet someone new.&quot;) [
 
 
 He tracks you.] (click-replace: &quot;tracks&quot;) [stalks] (click-append: &quot;He stalks you&quot;) [ again] (click-append: &quot;again&quot;) [ and again] (click-append: &quot;again and again&quot;) [ and again] (click-append: &quot;He stalks you again and again and again.&quot;) [
