--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ You give X the illusion of hope.] (click-append: &quot;of hope&quot;) [ and tbh 
 X apologises for his behaviour.] (click-append: &quot;X apologises for his behaviour.&quot;) [ He promises not to track you anymore.] (click-replace: &quot;track&quot;) [stalk] (click-append: &quot;He promises not to stalk you anymore.&quot;) [ He promises to stop threatening to kill himself if you leave.] (click-replace: &quot;threatening to kill himself&quot;) [threatening to kill you] (click-append: &quot;if you leave.&quot;) [
 
 
-He begs you to give him one more chance.] (click-append: &quot;He begs you to give him one more chance.&quot;)[ He threatens to kill himself if you leave him.](click-replace: &quot;himself&quot;) [you](click-replace: &quot;leave him&quot;) [ever meet someone new] (click-append: &quot;ever meet someone new.&quot;) [
+He begs you to give him one more chance.] (click-append: &quot;He begs you to give him one more chance.&quot;)[ He threatens to kill himself if you leave him.](click-replace: &quot;threatens to kill himself&quot;) [threatens to kill you](click-replace: &quot;leave him&quot;) [ever meet someone new] (click-append: &quot;ever meet someone new.&quot;) [
 
 
 He tracks you.] (click-replace: &quot;tracks&quot;) [stalks] (click-append: &quot;He stalks you&quot;) [ again] (click-append: &quot;again&quot;) [ and again] (click-append: &quot;again and again&quot;) [ and again] (click-append: &quot;He stalks you again and again and again.&quot;) [
@@ -513,7 +513,9 @@ You started sleeping with a hammer] (click-append: &quot;You started sleeping wi
 So, once again, [[you plead]] with him to change.]
 
 
-What else can you do but [[keep trying]] to help him see the truth.</tw-passagedata><tw-passagedata pid="18" name="keep trying" tags="" position="1032,587" size="100,100">You try so hard to connect with him at a deep level. (click-replace: &quot;at a deep level&quot;) [through endless drug-fuelled DMs] (click-replace: &quot;endless drug-fuelled DMs&quot;) [hours of mind-numbing sex] (click-replace: &quot;mind-numbing sex&quot;) [desperate sex] (click-replace: &quot;desperate sex&quot;) [humiliating sex] (click-append: &quot;humiliating sex&quot;) [ and from this destructive union your cells merge and divide] (click-replace: &quot;your cells merge and divide&quot;) [you conceive]
+What else can you do but [[keep trying]] to help him see the truth.</tw-passagedata><tw-passagedata pid="18" name="keep trying" tags="" position="1032,587" size="100,100">You try so hard to connect with him at a deep level. (click-replace: &quot;at a deep level&quot;) [through endless drug-fuelled DMs] (click-replace: &quot;endless drug-fuelled DMs&quot;) [hours of mind-numbing sex] (click-replace: &quot;mind-numbing sex&quot;) [desperate sex] (click-replace: &quot;desperate sex&quot;) [humiliating sex] (click-append: &quot;humiliating sex&quot;) [ and from this destructive union your cells merge and divide] (click-replace: &quot;your cells merge and divide&quot;) [you conceive] (click-append: &quot;you conceive.&quot;)
+
+&lt;img src=&quot;img/pregnant.png&quot; alt=&quot;pregnant woman&quot; /&gt;
 
 
 Now with ever more reason to work things out, [[you plead]] with him for a fresh start. (click-replace: &quot;for a fresh start&quot;) [to go back to the way things used to be between you when you had love and mutual respect] (click-append: &quot;when you had&quot;) [ the illusion of]
