--- a/index.html
+++ b/index.html
@@ -513,12 +513,12 @@ You started sleeping with a hammer] (click-append: &quot;You started sleeping wi
 So, once again, [[you plead]] with him to change.]
 
 
-What else can you do but [[keep trying]] to help him see the truth.</tw-passagedata><tw-passagedata pid="18" name="keep trying" tags="" position="1032,587" size="100,100">You try so hard to connect with him at a deep level. (click-replace: &quot;at a deep level&quot;) [through endless drug-fuelled DMs] (click-replace: &quot;endless drug-fuelled DMs&quot;) [hours of mind-numbing sex] (click-replace: &quot;mind-numbing sex&quot;) [desperate sex] (click-replace: &quot;desperate sex&quot;) [humiliating sex] (click-append: &quot;humiliating sex&quot;) [ and from this destructive union your cells merge and divide] (click-replace: &quot;your cells merge and divide&quot;) [you conceive] (click-append: &quot;you conceive.&quot;)
+What else can you do but [[keep trying]] to help him see the truth.</tw-passagedata><tw-passagedata pid="18" name="keep trying" tags="" position="1032,587" size="100,100">You try so hard to connect with him at a deep level. (click-replace: &quot;at a deep level&quot;) [through endless drug-fuelled DMs] (click-replace: &quot;endless drug-fuelled DMs&quot;) [hours of mind-numbing sex] (click-replace: &quot;mind-numbing sex&quot;) [desperate sex] (click-replace: &quot;desperate sex&quot;) [humiliating sex] (click-append: &quot;humiliating sex&quot;) [ and from this destructive union your cells merge and divide] (click-replace: &quot;your cells merge and divide&quot;) [you conceive] (click-append: &quot;you conceive.&quot;) [
 
 &lt;img src=&quot;img/pregnant.png&quot; alt=&quot;pregnant woman&quot; /&gt;
 
 
-Now with ever more reason to work things out, [[you plead]] with him for a fresh start. (click-replace: &quot;for a fresh start&quot;) [to go back to the way things used to be between you when you had love and mutual respect] (click-append: &quot;when you had&quot;) [ the illusion of]
+Now with ever more reason to work things out, [[you plead]] with him for a fresh start.] (click-replace: &quot;for a fresh start&quot;) [to go back to the way things used to be between you when you had love and mutual respect] (click-append: &quot;when you had&quot;) [ the illusion of]
 
 
 [[But all of his promises are dandelions in the wind.]] 
